--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 server.port = 8070
 
-# JSP 설정
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
 # static 폴더 설정
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
@@ -16,7 +12,9 @@ spring.datasource.username=scott
 spring.datasource.password=tiger
 
 # mybatis
-mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+mybatis.mapper-locations=classpath*:mybatis/mapper/**/*.xml
 
 spring.servlet.multipart.enabled=false
 
+#jwt
+jwt.secret=shareRoomjwt
