--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,25 @@
     "name": "googleClientSecret",
     "type": "java.lang.String",
     "description": "A description for 'googleClientSecret'"
+  },
+  {
+    "name": "googleClientSecret",
+    "type": "java.lang.String",
+    "description": "A description for 'googleClientSecret'"
+  },
+  {
+    "name": "googleApiKey",
+    "type": "java.lang.String",
+    "description": "A description for 'googleApiKey'"
+  },
+  {
+    "name": "jwt.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'jwt.secret'"
+  },
+  {
+    "name": "googleClientSecret",
+    "type": "java.lang.String",
+    "description": "A description for 'googleClientSecret'"
   }
 ]}
