0207 backend modify by ming

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8070
 
-# static•
+# staticï¿½
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
@@ -20,5 +20,14 @@ spring.servlet.multipart.enabled=false
 jwt.secret=shareRoomjwt
 
 #login
-googleClientSecret=rl3bpLZYNsps1od8WSS6Ep0Z
+googleClientSecret=H1a1ju-Co6IAiuEty_9_n8VT
 googleApiKey=AIzaSyAn2tQ_KtiNz_PhQH8sBkba6Kg7UUQbtec
+
+#Redis
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
+spring.redis.password=tiger
+spring.redis.timeout.seconds=600000
