--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,11 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     	<maven.compiler.source>1.8</maven.compiler.source>
+     	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	
 
 	<dependencies>
 		<dependency>
@@ -86,6 +90,16 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.3.4.RELEASE</version>
 		</dependency>
+		
+     <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+     </dependency>
+ 
+  
+  
 	</dependencies>
 
 	<build>
